--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,18 @@
-<?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu.specs</groupId>
 	<artifactId>sms</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>sms</name>
-	
 	<parent>
 		<groupId>be.nabu</groupId>
 		<artifactId>modules</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	
 	<dependencies>
 		<dependency>
-			<groupId>nabu.web</groupId>
-			<artifactId>application</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>nabu.types</groupId>
-			<artifactId>uml</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>nabu.types</groupId>
-			<artifactId>structure</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>nabu.services</groupId>
-			<artifactId>jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>nabu.services</groupId>
-			<artifactId>vm</artifactId>
+			<artifactId>iface</artifactId>
 		</dependency>
 	</dependencies>
 </project>
